# rslprompt

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: context.rs  formatting.rs  git.rs  lib.rs  main.rs  renderer.rs  shell.rs
src/background/: cache.rs  data.rs  dispatcher.rs  mod.rs
src/context/: git.rs  mod.rs  world.rs
src/widgets/: exit_status.rs  git_operations.rs  git_ref.rs  git_stash.rs  git_sync.rs  head_ref.rs  mod.rs  newline.rs  path.rs  prompt.rs  stash.rs  world_worktree.rs
